2013-12-13  Kaz Kylheku  <kaz@kylheku.com>

	* signal.c (set_sig_handler): Clear the deferred flag
	for a signal that is being set to ignored or default.

	* txr.1: Documented signals.

2013-12-12  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Registered vars for signal numbers.

	* signal.c (sig_hup, sig_int, sig_quit, sig_ill, sig_trap, sig_abrt,
	sig_bus, val sig_fpe, sig_kill, sig_usr1, sig_segv, sig_usr2, sig_pipe,
	sig_alrm, val sig_term, sig_chld, sig_cont, sig_stop, sig_tstp,
	sig_ttin, val sig_ttou, sig_urg, sig_xcpu, sig_xfsz, sigtalrm,
	sig_prof, val sig_poll, sig_sys, sig_winch, sig_iot, sig_stkflt,
	sig_io, sig_lost, sig_pwr): New variables.
	(sig_init): New variables initialized.

	* signal.h: New variables declared.

2013-12-12  Kaz Kylheku  <kaz@kylheku.com>

	First cut at signal handling support.

	* Makefile (OBJS-y): Include signal.o if have_posix_sigs is "y".

	* configure (have_posix_sigs): New variable, set by detecting POSIX
	signal stuff.

	* dep.mk: Regenerated.

	* arith.c, debug.c, eval.c, filter.c, hash.c, match.c, parser.y,
	parser.l, rand.c, regex.c, syslog.c, txr.c, utf8.c: Include new
	signal.h header, now required by unwind, and the <signal.h> system
	header.

	* eval.c (exit_wrap): New function.
	(eval_init): New functions registered as intrinsics: exit_wrap,
	set_sig_handler, get_sig_handler, sig_check.

	* gc.c (release): Unused functions removed.

	* gc.h (release): Declaration removed.

	* lib.c (init): Call sig_init.

	* stream.c (set_putc, se_getc, se_fflush): New static functions.
	(stdio_put_char_callback, stdio_get_char_callback, stdio_put_byte,
	stdio_flush, stdio_get_byte): Use new functions to enable
	signals when blocked on I/O.
	(tail_strategy): Allow signals across sleep.
	(pipev_close): Allow signals across waitpid.
	(se_pclose): New static function.
	(pipe_close): Use new function to enable signals across pclose.

	* unwind.c (uw_unwind_to_exit_point): use extended_longjmp instead of
	longjmp.
